--- a/app/src/main/res/layout/synthesis_detials.xml
+++ b/app/src/main/res/layout/synthesis_detials.xml
@@ -2,13 +2,22 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_content"
+    android:padding="10dip"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
+    <ImageView
+        android:id="@+id/pic"
+        android:layout_height="60dip"
+        android:layout_width="80dip"
+        android:src="@drawable/leftpic"
+        />
     <TextView
+        android:layout_toRightOf="@id/pic"
         android:id="@+id/wenzi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dip"
         android:text="箫"
         android:textSize="20dp"/>
 </RelativeLayout>
